Clean and fix some gradle, more fixing needed